Fixed warnings